# MaximusGameEngine

./: .gitignore  CMakeLists.txt  compile.bat  compile_emscripten.bat
Utilities/: CMakeLists.txt  main.cpp
Utilities/src/: util.h
emc/: build.ninja
engine/: CMakeLists.txt  main.cpp
engine/src/: assethandler.cpp  assethandler.h  audiosystem.cpp  audiosystem.h  common.h  console.h  editor.h  ezrender.cpp  ezrender.h  file.h  input.cpp  input.h  instance.cpp  instance.h  mgui.cpp  mgui.h  object.cpp  object.h  sprite.h  tileset.h  utility.h  world.cpp  world.h
gfx/: invalid.MESF  invalid.MESF.bak  plr.MESF  plr.MESF.bak  test.MESF
